static page finished

--- a/joinus.html
+++ b/joinus.html
@@ -65,20 +65,20 @@
     </nav>
 
     <!-- Partner -->
-    <section class="wrap partner_wrap">
+    <section class="wrap partner_wrap csscd0cd449318c50">
         <div class="partner_row">
             <div class="join">
                 <h4>加盟合作</h4>
                 <ul>
-                    <li>客户类别</li>
-                    <li>代理商资质政策</li>
-                    <li>代理商回报和支持</li>
-                    <li>意向合作申请表下载</li>
+                    <li><a href="#">客户类别</a></li>
+                    <li><a href="#">代理商资质政策</a></li>
+                    <li><a href="#">代理商回报和支持</a></li>
+                    <li><a href="#">意向合作申请表下载</a></li>
                 </ul>
             </div>
             <div class="contact">
                 <h4>联系我们</h4>
-                <p>*请填写以下信息，我们会尽快和您联系</p>
+                <small>*请填写以下信息，我们会尽快和您联系</small>
                 <form class="contact_form" action="" method="">
                     <div class="form_element">
                         <input type="text" name="name" value="" placeholder="您的姓名">
@@ -95,24 +95,23 @@
                 </form>
             </div>
         </div>
-        <div class="partner_row">
+        <div class="partner_row csscd0cd449318c50">
             <figure>
                 <img src="./image/pic_title.png" alt="partner">
-                <figcaption></figcaption>
+                <figcaption><p>合肥威尔汉森智能科技有限公司 作为“RELHANSN威尔汉森”品牌、产品、专利的唯一合法拥有人，现面向全国 范围内广泛招商，发展以城市代理商为主的战略合作伙伴。
+                    <br> 城市代理商————是指对天防指纹锁产品及销售管理模式认可，有市场开拓能力，经培训后对产品的操作及维护 有详细的了解，具备一定的售后服务能力，经威尔汉森公司授权，在指定区域内合法销售威尔汉森品牌指纹锁
+                    产品，并且服从公司安排，对其经销行为负责的产业。</p>
+                </figcaption>
             </figure>
-            <p>合肥威尔汉森智能科技有限公司 作为“RELHANSN威尔汉森”品牌、产品、专利的唯一合法拥有人，现面向全国 范围内广泛招商，发展以城市代理商为主的战略合作伙伴。
-                <br> 城市代理商————是指对天防指纹锁产品及销售管理模式认可，有市场开拓能力，经培训后对产品的操作及维护 有详细的了解，具备一定的售后服务能力，经威尔汉森公司授权，在指定区域内合法销售威尔汉森品牌指纹锁
-                产品，并且服从公司安排，对其经销行为负责的产业。
-            </p>
             <h3>威尔汉森用户类别</h3>
             <dl>
-                <dt>1）经销商</dt>
+                <dt>1) 经销商</dt>
                 <dd>经销威尔汉森指纹锁产品的商家，没有订货要求，同时也无法享受代理商的权益。</dd>
-                <dt>2）一级代理商</dt>
+                <dt>2) 一级代理商</dt>
                 <dd>代理销售威尔汉森指纹锁产品，享受代理价和其他代理商权益，由威尔汉森科技公司授权。</dd>
-                <dt>3）独家代理商</dt>
+                <dt>3) 独家代理商</dt>
                 <dd>威尔汉森科技公司产品的市场分销策略考虑，原则上只授权最具优势的一个代理商为城市独家代理商，确保代理商拥有足够的市场空间和丰厚的利润</dd>
-                <dt>4）战略伙伴</dt>
+                <dt>4) 战略伙伴</dt>
                 <dd>独家代理商中极为优秀的精锐，威尔汉森科技最顶级的渠道合作伙伴，基本资质要求和独家类似，但威尔汉森对其支持更大、合作更深、扶持更透，盈利更为丰厚，享有路虎配车特权。</dd>
             </dl>
         </div>
