--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <!-- Banner -->
     <header class="wrap banner_wrap wow animated fadeIn">
         <div>
-            <h2 class="animated bounceInLeft csscd0daf66f18c50">科技智能未来</h2>
-            <h1 class="animated bounceInRight csscd0cd449318c50">威尔汉森智能指纹锁</h1>
-            <h4 class="animated bounceInLeft csscd0daf66f18c50">合肥威尔汉森智能科技有限公司</h4>
+            <h2 class="animated fadeInLeft csscd0daf66f18c50">科技智能未来</h2>
+            <h1 class="animated fadeInRight csscd0cd449318c50">威尔汉森智能指纹锁</h1>
+            <h4 class="animated fadeInLeft csscd0daf66f18c50">合肥威尔汉森智能科技有限公司</h4>
         </div>
     </header>
 
@@ -85,11 +85,11 @@
     </section>
 
     <!-- Advantage -->
-    <section class="wrap advantage_wrap wow animated slideInUp csscd0cd449318c50">
-        <div class="advantage_row ">
+    <section class="wrap advantage_wrap csscd0cd449318c50">
+        <div class="advantage_row wow animated slideInUp">
             <h1 class="subtitle">因为专业 锁以放心</h1>
         </div>
-        <div class="advantage_row">
+        <div class="advantage_row wow animated slideInUp">
             <p>5A级钻化触摸屏，最新、最先进的密码防窥技术；最新键盘采用苹果手机级别触控原理； 密码 触摸屏优化等核心，<br>科技铸就品质，彰显身份地位的完美诠释。</p>
         </div>
         <div class="advantage_row">
@@ -109,20 +109,20 @@
     </section>
 
     <!-- Data -->
-    <section class="wrap data_wrap ">
+    <section class="wrap data_wrap">
         <div class="data_row">
             <img src="./image/pic_fingerprint.png" alt="fingerprint">
         </div>
         <div class="data_row csscd0cd449318c50">
-            <div>
+            <div class="wow animated fadeInLeft">
                 <h1 class="csscd0de8d1318c50">28</h1>
                 <p>欧美地区28%的公司、家庭<br>已经用上指纹锁</p>
             </div>
-            <div>
+            <div class="wow animated fadeInUp">
                 <h1 class="csscd0de8d1318c50">10000</h1>
                 <p>截至2016年10月1日，全国<br>累计已有10000多个房产项<br>目采用指纹锁</p>
             </div>
-            <div>
+            <div class="wow animated fadeInRight">
                 <h1 class="csscd0de8d1318c50">135</h1>
                 <p>全球超过135家品牌银行和<br>更高安全性场所使用</p>
             </div>
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Cut -->
-    <section class="wrap cut_wrap">
+    <section class="wrap cut_wrap wow animated slideInUp">
         <div>
             <p>
                 <i class="cut_line"></i>
@@ -141,7 +141,7 @@
     </section>
 
     <!-- Scene -->
-    <section class="wrap scene_wrap">
+    <section class="wrap scene_wrap wow animated slideInUp">
         <div class="scene_row">
             <img src="./image/pic_04.png" alt="">
         </div>
@@ -171,7 +171,7 @@
 
     <!-- Parameter -->
     <section class="wrap parameter_wrap csscd0cd449318c50">
-        <div class="parameter_row csscd0cd449318c50">
+        <div class="parameter_row wow animated fadeInLeft csscd0cd449318c50">
             <figure>
                 <img src="./image/pic_advantage01.png" alt="advantage_01">
                 <figcaption>瑞典指纹传感器</figcaption>
@@ -190,7 +190,7 @@
             </figure>
         </div>
 
-        <div class="parameter_row">
+        <div class="parameter_row wow animated fadeInRight">
             <div>
                 <h1><span class="csscd0de8d1318c50">100</span>万</h1>
                 <p>采集头 - 集成100万个传感器</p>
@@ -208,7 +208,7 @@
 
 
     <!-- Cut -->
-    <section class="wrap cut_wrap">
+    <section class="wrap cut_wrap wow animated slideInUp">
         <div>
             <p>
                 <i class="cut_line"></i>
@@ -218,8 +218,7 @@
         </div>
     </section>
     <!-- Product -->
-    <section class="wrap product_wrap">
-
+    <section class="wrap product_wrap wow animated slideInUp">
         <div class="product_row">
             <h1 class="subtitle">独具匠心 卓越品质</h1>
         </div>
@@ -249,7 +248,7 @@
 
     <!-- Contact -->
     <section class="wrap contact_wrap csscd0cd449318c50">
-        <div class="contact_row">
+        <div class="contact_row wow animated fadeInLeft">
             <div>
                 <img src="./image/icon_location.png" alt="location">
                 <span>地址:<br>合肥市高新区创新大道2800号创新产业园二期F1 204室</span>
@@ -263,7 +262,7 @@
                 <span>邮箱:<br>654661866@qq.com</span>
             </div>
         </div>
-        <div class="contact_row">
+        <div class="contact_row wow animated fadeInRight">
             <h2>联系我们</h2>
             <form class="contact_form" action="" method="">
                 <div class="form_element">
@@ -283,7 +282,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="wrap footer_wrap">
+    <footer class="wrap footer_wrap wow animated fadeIn">
         <div class="footer_row">
             <figure>
                 <img src="./image/qr_01.png" alt="QR">
