--- a/joinus.html
+++ b/joinus.html
@@ -62,10 +62,10 @@
             <div class="join">
                 <h4>加盟合作</h4>
                 <ul id="menu">
-                    <li id="client" class="selected"><a href="#">客户类别</a></li>
-                    <li id="aptitude"><a href="#">代理商资质政策</a></li>
-                    <li id="support"><a href="#">代理商回报和支持</a></li>
-                    <li id="form"><a href="#">意向合作申请表下载</a></li>
+                    <li class="selected"><a href="#client">客户类别</a></li>
+                    <li><a href="#level">代理商资质政策</a></li>
+                    <li><a href="#support">代理商回报和支持</a></li>
+                    <li><a href="#form">意向合作申请表下载</a></li>
                 </ul>
             </div>
             <div class="contact">
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="partner_row">
-            <div class="content-wrap-1 selected">
+            <div id="client" class="content-wrap-1 selected">
                 <figure>
                     <img src="./image/pic_title.png" alt="partner">
                     <figcaption>
@@ -110,7 +110,7 @@
                 </dl>
             </div>
 
-            <div class="content-wrap-2">
+            <div id="level" class="content-wrap-2">
                 <h3>代理商资质政策</h3>
                 <table>
                     <tr>
@@ -130,7 +130,7 @@
                 </table>
             </div>
 
-            <div class="content-wrap-3">
+            <div id="support" class="content-wrap-3">
                 <h3>代理商资质政策</h3>
                 <h4>1、三大回报渠道</h4>
                 <ul>
@@ -166,9 +166,9 @@
                 </div>
             </div>
 
-            <div class="content-wrap-4">
+            <div id="form" class="content-wrap-4">
                 <h3>意向合作申请表下载</h3>
-                <a href="/upload/意向合作申请表.doc">附件：意向合作申请表下载</a>
+                <a href="./upload/意向合作申请表.doc">附件：意向合作申请表下载</a>
             </div>
         </div>
 
